--- a/nexora-crypto-api/pom.xml
+++ b/nexora-crypto-api/pom.xml
@@ -96,6 +96,12 @@
 			<optional>true</optional>
 		</dependency>
 
+		<dependency>
+			<groupId>me.paulschwarz</groupId>
+			<artifactId>spring-dotenv</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+
 		<!-- Tests -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
