--- a/nexora-crypto-dashboard/webapp/Dockerfile
+++ b/nexora-crypto-dashboard/webapp/Dockerfile
@@ -1,11 +1,15 @@
-FROM node:alpine
-
-WORKDIR /usr/src/app
-
-COPY . /usr/src/app
-
-RUN npm install -g @angular/cli
-
+# Étape 1: Build Angular
+FROM node:20-alpine as build
+WORKDIR /app
+COPY package*.json ./
 RUN npm install
+COPY . .
+RUN npm run build --prod
 
-CMD ["ng", "serve", "--host", "0.0.0.0"]
+# Étape 2: Serveur NGINX
+FROM nginx:alpine
+COPY --from=build /app/dist/webapp/browser /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/nginx.conf
+
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
