--- a/nexora-crypto-dashboard/webapps/dashboard/package.json
+++ b/nexora-crypto-dashboard/webapps/dashboard/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webapp",
+  "name": "dashboard",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -17,13 +17,14 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "bootstrap": "^5.3.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.11",
-    "@angular/cli": "^19.2.11",
+    "@angular-devkit/build-angular": "^19.2.12",
+    "@angular/cli": "^19.2.12",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.6.0",
