fix Dockerfile for frontend, rename user class field, add unit tests

--- a/nexora-crypto-dashboard/webapps/dashboard/Dockerfile
+++ b/nexora-crypto-dashboard/webapps/dashboard/Dockerfile
@@ -1,4 +1,4 @@
-# Étape 1: Build Angular
+# Build Angular
 FROM node:20-alpine as build
 WORKDIR /app
 COPY package*.json ./
@@ -6,9 +6,9 @@ RUN npm install
 COPY . .
 RUN npm run build --prod
 
-# Étape 2: Serveur NGINX
+# Serveur NGINX
 FROM nginx:alpine
-COPY --from=build /app/dist/webapp/browser /usr/share/nginx/html
+COPY --from=build /app/dist/dashboard/browser /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 80
