--- a/nexora-crypto-api/pom.xml
+++ b/nexora-crypto-api/pom.xml
@@ -49,13 +49,13 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- Validation (DTO @Valid, etc.) -->
+		<!-- Validation DTO @Valid -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
-		<!-- Envoi d'e-mails -->
+		<!-- email -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
@@ -80,7 +80,7 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- Lombok (avec annotation processor) -->
+		<!-- Lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -114,7 +114,15 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- MongoDB : tu peux la supprimer si tu n’utilises pas Mongo -->
+		<!-- <dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>5.10.0</version>
+			<scope>test</scope>
+		</dependency> -->
+
+
+		<!-- MongoDB-->
 		<!--
         <dependency>
             <groupId>org.springframework.boot</groupId>
