--- a/nexora-crypto-dashboard/webapps/dashboard/nginx.conf
+++ b/nexora-crypto-dashboard/webapps/dashboard/nginx.conf
@@ -1,13 +1,17 @@
-server {
-    listen 80;
-    server_name localhost;
+events {}
 
-    root /usr/share/nginx/html;
-    index index.html;
+http {
+    server {
+        listen 80;
+        server_name localhost;
 
-    location / {
-        try_files $uri $uri/ /index.html;
+        root /usr/share/nginx/html;
+        index index.html;
+
+        location / {
+            try_files $uri $uri/ /index.html;
+        }
+
+        error_page 404 /index.html;
     }
-
-    error_page 404 /index.html;
 }
