--- a/nexora-crypto-dashboard/webapps/dashboard/nginx.conf
+++ b/nexora-crypto-dashboard/webapps/dashboard/nginx.conf
@@ -3,15 +3,33 @@ events {}
 http {
     server {
         listen 80;
-        server_name localhost;
-
-        root /usr/share/nginx/html;
-        index index.html;
 
         location / {
+            root /usr/share/nginx/html;
+            index index.html;
             try_files $uri $uri/ /index.html;
         }
 
-        error_page 404 /index.html;
+        # Handle JavaScript | CSS files with the correct MIME type
+        location ~ \.(js|css)$ {
+            root /usr/share/nginx/html;
+            include /etc/nginx/mime.types;
+        }
+
+        # Catch-all location to handle refreshes on any route
+        location ~ ^/.+$ {
+            root /usr/share/nginx/html;
+            index index.html;
+            try_files $uri /index.html;
+        }
+
+        # Backend reverse proxy
+        # location /api {
+        #     proxy_pass http://bsn-api:8088;
+        #     proxy_set_header Host $host;
+        #     proxy_set_header X-Real-IP $remote_addr;
+        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #     proxy_set_header X-Forwarded-Proto $scheme;
+        # }
     }
 }
