--- a/nexora-crypto-api/src/main/resources/application-docker.properties
+++ b/nexora-crypto-api/src/main/resources/application-docker.properties
@@ -1,10 +1,12 @@
+server.port=8080
+server.address=0.0.0.0
+
 spring.datasource.url=jdbc:mysql://mysql:3306/db_crypto_app
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=true
 
