--- a/nexora-crypto-api/src/main/resources/application-local.properties
+++ b/nexora-crypto-api/src/main/resources/application-local.properties
@@ -3,10 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Config MongoDb
-#spring.data.mongodb.uri=mongodb+srv://AppSimul15:FirstAppFullS096@cluster0.ietqhbv.mongodb.net/Crypto-App?retryWrites=true&w=majority
-
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=true
 
@@ -22,3 +19,5 @@ spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+# Config MongoDb
+#spring.data.mongodb.uri=mongodb+srv://AppSimul15:FirstAppFullS096@cluster0.ietqhbv.mongodb.net/Crypto-App?retryWrites=true&w=majority
