--- a/nexora-crypto-api/.gitignore
+++ b/nexora-crypto-api/.gitignore
@@ -4,8 +4,9 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-./src/main/resources/application-docker.properties
-./src/main/resources/application-test.properties
+src/main/resources/application-docker.properties
+src/main/resources/application-test.properties
+
 
 ### STS ###
 .apt_generated
