add home component and auth-guard

--- a/nexora-crypto-api/Dockerfile
+++ b/nexora-crypto-api/Dockerfile
@@ -1,4 +1,4 @@
-# Étape de build
+# build
 FROM maven:3.9.5-eclipse-temurin-17 AS build
 WORKDIR /build
 COPY pom.xml .
@@ -6,7 +6,7 @@ RUN mvn dependency:go-offline
 COPY src ./src
 RUN mvn clean package -DskipTests
 
-# Étape de runtime
+# runtime
 FROM eclipse-temurin:17-jdk
 WORKDIR /app
 COPY wait-for-it.sh /wait-for-it.sh
