--- a/nexora-crypto-dashboard/webapps/dashboard/angular.json
+++ b/nexora-crypto-dashboard/webapps/dashboard/angular.json
@@ -24,11 +24,17 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+                {
+                "glob": "**/*",
+                "input": "src/assets",
+                "output": "assets"
               }
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
             "scripts": [
      
