add api url coingecko in application-test

--- a/nexora-crypto-api/src/main/resources/application-test.properties
+++ b/nexora-crypto-api/src/main/resources/application-test.properties
@@ -12,3 +12,5 @@ spring.mail.username=test
 spring.mail.password=test
 spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.smtp.starttls.enable=false
+
+coingecko.api.url=https://api.coingecko.com/api/v3/
