--- a/nexora-crypto-dashboard/webapps/dashboard/package.json
+++ b/nexora-crypto-dashboard/webapps/dashboard/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.5.0",
+    "lightweight-charts": "^4.2.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
