--- a/nexora-crypto-api/src/main/resources/application.properties
+++ b/nexora-crypto-api/src/main/resources/application.properties
@@ -2,8 +2,7 @@ spring.application.name=nexora-crypto-api
 # Serveur
 #server.port=8080
 
-
-
+spring.profiles.active=docker
 
 # API CoinGecko (URL externe)
 #coingecko.api.url=https://api.coingecko.com/api/v3/
