--- a/nexora-crypto-api/Dockerfile
+++ b/nexora-crypto-api/Dockerfile
@@ -1,22 +1,22 @@
-FROM maven:3.9.6-eclipse-temurin-17 AS builder
-
-WORKDIR /app
-
-COPY pom.xml ./
-COPY .mvn .mvn
-COPY mvnw ./
-RUN ./mvnw dependency:go-offline
-
+# build
+FROM maven:3.9.5-eclipse-temurin-17 AS build
+WORKDIR /build
+COPY pom.xml .
+RUN mvn dependency:go-offline
 COPY src ./src
+RUN mvn clean package -DskipTests
 
-RUN ./mvnw clean package -DskipTests
-
-FROM eclipse-temurin:17-jdk-alpine
-
+# runtime
+FROM eclipse-temurin:17-jdk
 WORKDIR /app
+COPY wait-for-it.sh /wait-for-it.sh
+RUN chmod +x /wait-for-it.sh
 
-COPY --from=builder /app/target/*.jar app.jar
+COPY target/*.jar app.jar
+
+RUN apt-get update && apt-get install -y default-mysql-client && apt-get clean
 
 EXPOSE 8080
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
+CMD ["/wait-for-it.sh", "-t", "60", "mysql:3306", "--", "java", "-jar", "/app/app.jar"]
+
