--- a/nexora-crypto-api/Dockerfile
+++ b/nexora-crypto-api/Dockerfile
@@ -1,16 +1,15 @@
 
 FROM maven:3.9.6-eclipse-temurin-17 AS builder
 WORKDIR /build
-COPY nexora-crypto-api /build
+COPY src ./src
 
 RUN mvn clean package -DskipTests
-
 
 FROM eclipse-temurin:17-jdk-alpine
 
 WORKDIR /app
 
-COPY --from=builder /build/target/*.jar app.jar
+COPY target/*.jar app.jar
 
 EXPOSE 8080
 
