--- a/nexora-crypto-api/src/main/resources/application-test.properties
+++ b/nexora-crypto-api/src/main/resources/application-test.properties
@@ -16,6 +16,7 @@ spring.mail.properties.mail.smtp.starttls.enable=false
 
 coingecko.api.url=https://api.coingecko.com/api/v3/
 
+frontend.url=http://localhost:4200
 #debug=true
 #trace=true
 
